@@ -7,6 +7,8 @@ Changes since previous releases:
   based on heavily refactored IPC Example from earlier SDK releases
 - ChannelArrangement helper class refactored as editable ChannelFormat, which now maintains
   a channel count too and copies the channel arrangement data instead of referencing it
+  As a result, DocumentController::doUpdateChannelArrangement() has been removed since
+  the arrangement is now always available, just like sample rate etc.
 
 === ARA SDK 2.2 release (aka 2.2.001) (2022/11/07) ===
 - added surround support for audio sources
